welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: too many arguments for method estFaceMur: ()Boolean
	else (estFaceMur) {droite()
                          ^